fix warning in code